# FlexTrackV2

./: .boltignore  .gitignore  README.md  environment.yml  install.sh  install_vot.sh  pyproject.toml  requirements.txt
Depthtrack_workspace/: dataset.json  dataset.json.example  trackers.ini  trackers.ini.example
RGBE_workspace/: test_rgbe_edge.py  test_rgbe_mgpus.py  test_rgbe_missrate.py
RGBT_workspace/: test_depthtrack_mgpus.py  test_rgbt_mgpus.py
checkpoints/: FlexTrackV2.pth.tar.sha256  FlexTrackV2_large.pth.tar.sha256
docs/: ABLATIONS.md  ALL_BENCHMARKS_FINAL_REPORT.md  MULTI_NODE_SETUP.md  REPRODUCE_missrate.md  TPAMI_ABLATION_ANALYSIS_V56.md
results/: ablation_dashboard.html  degradation_aligned.html  depthtrack_degradation_official.json  gs_depthtrack_full_v2_FINAL.json  gs_depthtrack_miss_v2_FINAL.json  gs_large_ALL_FINAL.json  gs_large_depthtrack_full_FINAL.json  gs_large_rgbt234_full_FINAL.json  gs_largemiss_ALL_FINAL.json  gs_largemiss_depthtrack_miss_FINAL.json  gs_largemiss_lasher_miss_FINAL.json  gs_largemiss_rgbt234_miss_FINAL.json  gs_lasher_full_FINAL.json  gs_rgbt234_full_FINAL.json  gs_rgbt234_miss_FINAL.json  gs_visevent_full_FINAL.json  gs_visevent_full_bonus_FINAL.json  lasher_by_attribute.json  lasher_degradation_official.json  lasher_miss_by_pattern.json  missrate_curves.html  missrate_curves_4ds_rung0.json  modality_asymmetry.html  modality_asymmetry.json  rgbt234_degradation.html  rgbt234_degradation_official.json  three_way_missrate.html  three_way_missrate.json  visevent_degradation_calibrated.json  visevent_degradation_official.json
(+565 files in other folders)
