[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flextrackv2"
version = "2.0.0"
description = "Adaptive and robust multi-modal tracking (RGB-T / RGB-E / RGB-D) under incomplete modalities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Yuedong Tan" }]
keywords = ["visual-tracking", "multi-modal", "RGB-T", "RGB-E", "RGB-D", "mixture-of-experts"]

# Core runtime deps (PyTorch installed separately via conda for the right CUDA build).
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "timm",
    "PyYAML",
    "easydict",
    "yacs",
    "scipy",
    "pandas",
    "tqdm",
    "scikit-image",
    "six",
    "huggingface_hub",
]

[project.optional-dependencies]
train = ["lmdb", "pycocotools", "jpeg4py", "tensorboard"]
viz = ["matplotlib"]
profile = ["thop"]
# VOT toolkit is git-only; install via `bash install_vot.sh`.

[project.urls]
Homepage = "https://github.com/supertyd/FlexTrackV2"
Weights = "https://huggingface.co/taryya/FlexTrackV2"

[tool.setuptools]
packages = ["lib"]
